my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.c:1:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    1 | main(){if(1.17549435e-38F<=1.1)exit(0);abort();}
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.c:1:32: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    1 | main(){if(1.17549435e-38F<=1.1)exit(0);abort();}
      |                                ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.c:1:32: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.c:1:40: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    1 | main(){if(1.17549435e-38F<=1.1)exit(0);abort();}
      |                                        ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920618-1.c:1:40: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
3 errors generated.
